tests/baselines/reference/importCallExpressionInCJS2.errors.txt
tests/cases/conformance/dynamicImport/2.ts(10,1): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator


==== tests/cases/conformance/dynamicImport/0.ts (0 errors) ====
    export function foo() { return "foo"; }
    
==== tests/cases/conformance/dynamicImport/1.ts (0 errors) ====
    export function backup() { return "backup"; }
    
==== tests/cases/conformance/dynamicImport/2.ts (1 errors) ====
    async function compute(promise: Promise<any>) {
        let j = await promise;
        if (!j) {
            j = await import("./1");
            return j.backup();
        }
        return j.foo();
    }
    
    compute(import("./0"));
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator